--- a/E_Hospitality/templates/create_doctor.html
+++ b/E_Hospitality/templates/create_doctor.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+
+
 <div class="container mt-4">
     <h2 class="text-center mb-4" style="font-size: 36px; font-weight: bold; color: #0056b3;">Create Your Profile</h2>
 
@@ -20,6 +23,16 @@
                 {{ form.last_name }}
             </div>
         </div>
+
+
+        <div class="form-group row mb-4">
+            <label for="{{ form.facility.id_for_label }}" class="col-md-4 col-form-label" style="font-size: 18px; font-weight: bold;">Hospital Name</label>
+            <div class="col-md-8">
+                {{ form.facility }}
+            </div>
+        </div>
+
+
 
         <div class="form-group row mb-4">
             <label for="{{ form.specialization.id_for_label }}" class="col-md-4 col-form-label" style="font-size: 18px; font-weight: bold;">Specialization</label>
@@ -47,4 +60,6 @@
         </div>
     </form>
 </div>
+
+
 {% endblock %}
