--- a/E_Hospitality/templates/register.html
+++ b/E_Hospitality/templates/register.html
@@ -20,6 +20,8 @@
         <option value="" disabled selected>Select a role</option>
         <option value="Patient">Patient</option>
         <option value="Doctor">Doctor</option>
+        <option value="Admin">Admin</option>
+
     </select>
 
     <!-- Submit Button -->
